# yingzhi-AI

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.web  README.md  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: docker.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/login/: page.tsx
app/studio/: layout.tsx  page.tsx
backend/: Cargo.toml  README.md
backend/src/: config.rs  entitlehub.rs  error.rs  main.rs  models.rs  routes.rs  state.rs
components/brand/: backgrounds.tsx  gradient-thumb.tsx  logo.tsx
components/marketing/: cta-section.tsx  features.tsx  footer.tsx  hero.tsx  navbar.tsx  pricing.tsx  showcase-wall.tsx  workflow.tsx
components/shared/: masonry-grid.tsx  media-card.tsx  media-grid-skeleton.tsx  reveal.tsx
components/studio/: aspect-ratio-picker.tsx  asset-picker-dialog.tsx  create-workspace.tsx  generation-gallery.tsx  media-detail-dialog.tsx  nav-config.ts  page-container.tsx  page-header.tsx  prompt-dock.tsx  sidebar.tsx  studio-shell.tsx  (+3 more)
deploy/: .env.example  docker-compose.yml  nginx.conf
lib/: local-actions.ts  model-capabilities.ts  utils.ts
ops/: install-image.sh  install.sh  shadowweavectl.sh  update-image.sh  yingzhictl.sh
scripts/: diag-order.js  diag-ratios.js  diag-video.js  diag-video2.js  diag-video3.js  measure-cols.js  preview-unify.js  run-backend.ps1  shot-detail.js  shot-image-1920.js  shot.js  shot10.js  shot2.js  shot3.js  shot4.js  shot5.js  shot6.js  shot7.js  shot8.js  shot9.js  start-frontend.ps1  test-unify.js  test-unify2.js  verify-unify.js
(+29 files in other folders)
